2010-12-16  Olaf Till <olaf.till@uni-jena.de>

	* optimization/sqp.m: Fix indexing error in sqp bounds selection. 

2010-12-14  Doug Stewart <doug.dastew@gmail.com>

	* plot/bar.m: Improve the docstring.

2010-12-14  John W. Eaton  <jwe@octave.org>

	* plot/private/__quiver__.m: Use high contrast color black for arrows
	in quiver3 plots.  Bug #31802.

2010-12-14  Rik  <octave@nomad.inbox5.com>

	* plot/compass.m, plot/errorbar.m, plot/legend.m, plot/rose.m, 
	plot/scatter.m, plot/scatter3.m, plot/stairs.m: Assign data used in 
	demo plots for reproducibility between runs.

2010-12-13  Rik  <octave@nomad.inbox5.com>

	* statistics/median.m: Add NaN test case from bug #29930.

2010-12-13  Rik  <octave@nomad.inbox5.com>

	* general/isequalwithequalnans.m: Add test case from bug #31239.

2010-12-13  Ben Abbott  <bpabbott@mac.com>

	* plot/__print_parse_opts__.m: Fix indexing bug for varargin.
	Bug #31862.

2010-12-13  Rik  <octave@nomad.inbox5.com>

	* statistics/distributions/betapdf.m: Add test for large values of
	alpha and beta.

2010-12-13  Rik  <octave@nomad.inbox5.com>

	* strings/strmatch.m: Add test with null search pattern.

2010-12-13 Doug Stewart  <doug.dastew@gmail.com>

	* plot/hist.m: Improved the help section.

2010-12-13  Kai Habel  <kai.habel@gmx.de>

	* plot/private/__add_default_menu__.m: New function.
	* plot/figure.m: Call __add_default_menu__ function.
	* plot/module.mk: Add new file to list.

2010-12-13  Rik  <octave@nomad.inbox5.com>

	* optimization/sqp.m: Change docstring to refer to x0 as the initial
	seed vector.

2010-12-13  Olaf Till <olaf.till@uni-jena.de>

	* optimization/sqp.m: Remove never violated Inf bounds from
	computation in function for inequality constraints (bug
	#31742).  Remove non-functional check for inequality constraints
	being +Inf in each iteration.

2010-12-12  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/optimget.m: Use explicit toupper conversion rather than
	lookup(..., "i").